# workflow-orchestration-service

./: .ai-repository-summary.md  AGENTS.md  Python (Stripped).code-profile  docker-compose.yml  requirements.txt  run_opencode_prompt.sh  workflow-orchestration-queue-tango48.code-workspace  workflow-orchestration-service.code-workspace
.devcontainer/: devcontainer.json
.factory/droids/: agent-instructions-expert.md  backend-developer.md  cloud-infra-expert.md  code-reviewer.md  database-admin.md  debugger.md  developer.md  devops-engineer.md  documentation-expert.md  frontend-developer.md  github-expert.md  odbplusplus-expert.md  orchestrator.md  planner.md  product-manager.md  qa-test-engineer.md  researcher.md  ux-ui-designer.md
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: orchestrator-agent.yml  prebuild-devcontainer.yml  publish-docker.yml
.opencode/: package.json
.opencode/agents/: agent-instructions-expert.md  backend-developer.md  cloud-infra-expert.md  code-reviewer.md  database-admin.md  debugger.md  developer.md  devops-engineer.md  documentation-expert.md  frontend-developer.md  github-expert.md  planner.md  (+6 more)
client/: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
client/src/: __init__.py  config.py  notifier.py  notifier_service.py  orchestrator_sentinel.py  sentinel.py
client/src/models/: __init__.py  schemas.py  work_item.py
client/src/queue/: github_queue.py
client/tests/: __init__.py  conftest.py  test_models.py  test_notifier_service.py  test_orchestrator_sentinel.py
client/tests/fixtures/: __init__.py  issues-labeled.json  issues-opened.json  pull_request-opened.json
docs/: local-lan-orchestration-plan.md  local-orchestration-quickstart.md  new_features.md  onprem-gap-analysis.md  orchestration-clients.md  orchestration-scripts-reference.md  orchestration-server.md  orchestration-services.md  orchestration-support-services.md  orchestrator-supervisor.md  server-system-service-plan.md  subagent-prefix-plan.md  trace-filtering-analysis-foxtrot86.md  workflow-issues-and-fixes.md
local_ai_instruction_modules/: ai-development-instructions.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  interactive-report.html  pyproject.toml
plan_docs-self-contained/: IMPLEMENTATION-PLAN.md
plan_docs/.workflow-orchestration-queue (prev app)/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md
plan_docs/extra-repo-orchestration-opencode-devcontainer-server-standalone-self-hosted-service_plans/.historical/rev0/: F1-full-dev-plan_(OPENCODE).md
plan_docs/extra-repo-orchestration-opencode-devcontainer-server-standalone-self-hosted-service_plans/.historical/rev1/: task.md
scripts/: devcontainer-opencode.sh  entrypoint.sh  resolve-and-merge-stacked-prs.sh  trigger-project-setup.ps1
test/: TestTriggerProjectSetup.ps1  test-opencode-run.sh  test-prompt-assembly.sh
(+14 files in other folders)
