[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "os-apow-client"
version = "0.1.0"
description = "OS-APOW Orchestration Client — Webhook handler and Sentinel orchestrator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
